--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.15.1",
     "react-swiper": "^0.1.5",
     "swiper": "^11.2.2",
     "tailwind-merge": "^3.0.1",
